# plasmid_caller

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  btest.sh  pyproject.toml  refresh.sh
notes/: plasmid_caller_progress_20250516.md
old_code/v3/: best_matches_v5.tsv  best_matches_v6_1kb.tsv  best_matches_v6_5kb.tsv  best_matches_v7_1000bp.tsv  discrepancies_v7_wp_pf.csv  environment.yml  get_v6_matrix.ipynb  plasmid_blaster.py  plasmid_caller_v4.ipynb  plasmid_presence_matrix_v6_1000bp.csv  plasmid_presence_matrix_v6_2500bp.csv  plasmid_presence_matrix_v6_5000bp.csv  plasmid_presence_matrix_v7_1000bp.csv  plasmid_presence_matrix_v7_2500bp.csv  plasmid_presence_matrix_v7_2500bp_LR.csv  plasmid_presence_matrix_v7_2500bp_SR.csv  plasmid_presence_matrix_v7_5000bp.csv  whole_contig_blast.ipynb
old_code/v3/dbs/all_pf32_db/: all_pf32_db.phi  all_pf32_db.phr  all_pf32_db.pin  all_pf32_db.pjs  all_pf32_db.pos  all_pf32_genes.fasta
old_code/v3/old_code/: pfam_typing.ipynb
old_code/v3/parsing_tables/: acc_to_plasmid.tsv
old_code/v4_test/: Untitled.ipynb  asms_vs_wp_minimap2.ipynb
old_code/v5/5.1.2/: Dockerfile  plasmid_caller.py
old_code/v5/5.2.0/: Dockerfile  plasmid_caller.py
scripts/: XXXbuild_hooks.py  build_hooks.py  manage_blast.sh
src/plasmid_caller/: __about__.py  __init__.py  blast_code.py  blast_manager.py  fileops.py  get_results.py  main.py  plasmid_caller.py  results_generation_logic.py  scoring.py
src/plasmid_caller/scripts/: manage_blast.sh
tests/: test_plasmid_caller.py
v3/: .old_gitignore  blast_in_container.smk  whole_contig_blast_busted.ipynb
v3/containers/: blast.scif
v3/dbs/all_pf32_db/: all_pf32_db.phd  all_pf32_db.psq
v3/dbs/all_plasmids_bbss/: Bbss.hypotheticals.faa  Bbss.txt
v3/dbs/pf32_db/: Minimal-PF32-testor-set-March2021.faa  pfam32db.phr  pfam32db.pin  pfam32db.pjs  pfam32db.pos  pfam32db.psq
v3/dbs/pf32_test_ref/: pf32_ref_v1_test_set_header_table.tsv
v3/dbs/pf32_v3/: pf32.phr  pf32.pjs  pf32.pos  pf32.psq
v3/dbs/wp_db_old/: wpdb.ndb
v3/dbs/wp_v2/: wp_db.ndb  wp_db.nhr
v3/old_code/: ospc_typing.ipynb
v3/old_code/blast_parsers/: blast_parser.ipynb
v3/old_code/blast_runners/: run_blast.py
v3/parsing_tables/: plasmids.json
v5/: Dockerfile  plasmid_caller.py  requirements.txt
v5/5.1.2/: blast_parsing_dict.pkl  plasmid_caller.py
v5/5.1.3/: .dockerignore  plasmid_caller.py
v5/5.2.0/: Dockerfile  plasmid_caller.py
v5/5.3.0/: Dockerfile
v5/5.3.0/db/: .dockerignore
v5/db/pf32/: pf32.phr  pf32.pin  pf32.pjs  pf32.pos
v6/: Dockerfile  plasmid_caller.py  plasmid_caller_v6.py  requirements.txt
v6/db/ref_seqs/: pf32_v4.faa
(+28 files in other folders)
