[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plasmid_caller"
dynamic = ["version"]
description = "Python tool using BLAST to classify plasmids in B. burgdorferi genome assemblies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael J. Foster", email = "TBD@no.co"},
    {name = "Ben Kotzen", email = "TBD@no.co"},
]
dependencies = [
    "biopython>=1.84",
    "pandas>=2.0.0",
    "tqdm>=4.66.1",
    "intervaltree>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.1.1",
    "uv>=0.7.6"
]

[project.scripts]
plasmid_caller = "plasmid_caller.main:main"

[tool.hatch.version]
path = "src/plasmid_caller/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/plasmid_caller"]
include = [
    "src/plasmid_caller/scripts/manage_blast.sh",
    "src/plasmid_caller/db/**/*"
]

[tool.hatch.build.targets.sdist]
include = [
    "src/plasmid_caller/**/*",
    "src/plasmid_caller/db/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
